Mise en place d'un css pour le header et le footer et mise en place du css dans la page 404

--- a/IHM/views/error.ejs
+++ b/IHM/views/error.ejs
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Madera | 404</title>
-        <meta charset="utf-8">
-    </head>
 
-    <body>
-        <% include header.ejs %>
-    </body>
+<head>
+    <title>Madera | 404</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
+</head>
+
+<body>
+    <% include header.ejs %>
+
+        <section>
+            <article>
+                <h1>Erreur 404 Page Non Trouvé</h1>
+            </article>
+        </section>
+
+        <% include footer.ejs %>
+</body>
+
 </html>
