--- a/IHM/views/index.ejs
+++ b/IHM/views/index.ejs
@@ -5,6 +5,7 @@
     <title>Madera</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
     <link rel="shortcut icon" href="/images/icone.png">
 </head>
 
@@ -23,13 +24,6 @@
             </div>
         </article>
     </section>
-
-    <footer>
-        <a href="/">Accueil</a>
-        <a href="/configuration">Configuration</a>
-        <a href="/devis">Devis</a>
-        <a href="/paiements">Paiements</a>
-    </footer>
 </body>
 
 </html>
