--- a/IHM/views/error.ejs
+++ b/IHM/views/error.ejs
@@ -13,7 +13,7 @@
 
         <section>
             <article>
-                <h1>Erreur 404 Page Non Trouvé</h1>
+                <h1>Erreur 404 Page Non Trouvée</h1>
             </article>
         </section>
 
