Footer dans l'index

--- a/IHM/views/index.ejs
+++ b/IHM/views/index.ejs
@@ -11,19 +11,20 @@
 
 <body>
     <% include header.ejs %>
-    <section>
-        <article>
-            <div>
-                <form>
-                    <label for="login">Login : </label><br>
-                    <input type="text" id="login" name="login" /><br>
-                    <label for="password">Mot de passe : </label><br>
-                    <input type="password" id="password" name="password" /><br>
-                    <br><input type="submit" value="Connexion" />
-                </form>
-            </div>
-        </article>
-    </section>
+        <section>
+            <article>
+                <div>
+                    <form>
+                        <label for="login">Login : </label><br>
+                        <input type="text" id="login" name="login" /><br>
+                        <label for="password">Mot de passe : </label><br>
+                        <input type="password" id="password" name="password" /><br>
+                        <br><input type="submit" value="Connexion" />
+                    </form>
+                </div>
+            </article>
+        </section>
+        <% include footer.ejs %>
 </body>
 
 </html>
