Test de récup du login et du mdp dans home.ejs

--- a/IHM/views/index.ejs
+++ b/IHM/views/index.ejs
@@ -14,7 +14,7 @@
 		<section>
 			<article>
 				<div>
-					<form>
+					<form action="/home" method="post">
 						<label for="login">Login : </label><br>
 						<input type="text" id="login" name="login" /><br>
 						<label for="password">Mot de passe : </label><br>
