--- a/IHM/views/index.ejs
+++ b/IHM/views/index.ejs
@@ -18,13 +18,13 @@
                         <label for="login">Login : </label><br>
                         <input type="text" id="login" name="login" /><br>
                         <label for="password">Mot de passe : </label><br>
-                        <input type="password" id="password" name="password" /><br>
-                        <br><input type="submit" value="Connexion" />
+                        <input type="password" id="password" name="password" /><br><br>
+                        <input type="submit" value="Connexion" />
                     </form>
                 </div>
             </article>
         </section>
-        <% include footer.ejs %>
+    <% include footer.ejs %>
 </body>
 
 </html>
