--- a/IHM/views/error.ejs
+++ b/IHM/views/error.ejs
@@ -14,6 +14,7 @@
         <section>
             <article>
                 <h1>Erreur 404 Page Non Trouvée</h1>
+                <p>Veuillez retourner à la page d'accueil</p>
             </article>
         </section>
 
