--- a/IHM/public/stylesheets/header_footer.css
+++ b/IHM/public/stylesheets/header_footer.css
@@ -1,10 +1,15 @@
+header
+{
+    background-color: lightgrey;
+}
+
 header>a>img {
     width: 35%;
     height: auto;
 }
 
 footer {
-    background-color: white;
+    background-color: rgb(110, 99, 86);
     position: fixed;
     height: 30px;
     bottom: 0px;
@@ -18,7 +23,7 @@ footer>a {
     word-wrap: break-word;
     margin-left: 10px;
     text-decoration: none;
-    color: rgb(110, 99, 86);
+    color: rgb(141, 198, 63);
     font-size: 14px;
     font-weight: bold;
 }
