--- a/IHM/views/header.ejs
+++ b/IHM/views/header.ejs
@@ -1,3 +1,19 @@
 <header>
-    <a href="/"><img src="/images/Logo_Madera.png"></a>
+    <div class="row">
+        <div class="col-md-9 col-sm-9 col-xs-12">
+            <a href="/"><img src="/images/Logo_Madera.png"/></a>
+        </div>
+        <% if(data.login)
+        {
+        %>
+        <div class="col-md-3 col-sm-3 col-xs-12" style="margin-top: 4%;">
+            <h3><%= data.login %></h3>
+            <button type="button" class="btn btn-default btn-sm">
+                <span class="glyphicon glyphicon-log-out"></span> Déconnexion
+            </button>
+        </div>
+        <%
+        }
+        %>
+    </div>
 </header>
