--- a/IHM/views/home.ejs
+++ b/IHM/views/home.ejs
@@ -5,14 +5,19 @@
 	<title>Madera</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+	<% include bootstrap_link.ejs %>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
 	<link rel="shortcut icon" href="/images/icone.png">
 </head>
 
 <body>
 	<% include header.ejs %>
-		<div>Vous venez de vous connecter avec le login " <%= data.login %> " et le mdp " <%= data.password %> "</div>
-		<% include footer.ejs %>
+        <section>
+            <article>
+                <h2>Bonjour <%= data.login %></h2>
+            </article>
+        </section>
+    <% include footer.ejs %>
 </body>
 
 </html>
