--- a/IHM/views/index.ejs
+++ b/IHM/views/index.ejs
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
-	<% include boostrap_link.ejs %>
+	<% include booTstrap_link.ejs %>
 	<link rel="shortcut icon" href="/images/icone.png">
 </head>
 
@@ -26,7 +26,7 @@
 				</div>
 			</article>
 		</section>
-		<% include footer.ejs %>
+    <% include footer.ejs %>
 </body>
 
 </html>
