--- a/IHM/views/error.ejs
+++ b/IHM/views/error.ejs
@@ -13,8 +13,8 @@
 
         <section>
             <article>
-                <h1>Erreur 404 Page Non Trouvée</h1>
-                <p>Veuillez retourner à la page d'accueil.</p>
+                <h1>Erreur :</h1>
+                <p><%= error %></p>
             </article>
         </section>
 
