--- a/IHM/views/home.ejs
+++ b/IHM/views/home.ejs
@@ -16,6 +16,14 @@
             <article>
                 <h2>Bonjour <%= data.login %></h2>
             </article>
+            <artcile class="row" style="text-align: center;">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <a href="commercial/createDevis.ejs"><h3>Créer Devis</h3></a>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <a><h3>Visualiser Devis</h3></a>
+                </div>
+            </artcile>
         </section>
     <% include footer.ejs %>
 </body>
