--- a/IHM/public/stylesheets/index.css
+++ b/IHM/public/stylesheets/index.css
@@ -12,8 +12,7 @@ header{
 }
 
 section{
-    height: 100%;   
-    margin-bottom: 30px;
-    background-color: white;
-    text-align: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 5%;
 }
