--- a/IHM/views/commercial/createPlan.ejs
+++ b/IHM/views/commercial/createPlan.ejs
@@ -4,7 +4,9 @@
 <head>
 	<title>Madera</title>
 	<meta charset="utf-8">
-	<% include bootstrap_link.ejs %>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
+	<% include ../bootstrap_link.ejs %>
 	<link rel="shortcut icon" href="/images/icone.png">
 </head>
 
@@ -14,10 +16,31 @@
         <article class="row">
             <form>
                 <div class="col-md-4 col-sm-4 col-xs-12">
-
+                    <label>Gamme de la maison :</label><br>
+                    <select class="form-control"></select><br>
+                    <label>Choix du modèle :</label><br>
+                    <select class="form-control"></select><br>
+                    <label>Choix de l'étage :</label><br>
+                    <select class="form-control"></select><br>
+                    <label>Ajouts des options :</label><br>
+                    <select class="form-control"></select><br>
+                    <input type="submit" value="Ajouter" class="btn btn-success"><br>
+                    <br>
+                    <table>
+                        <th style="width: 100px;">Options</th>
+                        <th style="width: 100px;">Supprimer</th>
+                        <tr>
+                            <td>Mur classique</td>
+                            <td><a href="">supprimer</a></td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
                     <h3>Plan :</h3>
+                    <img src="/images/CLA_1_CAR_0.png" alt="plan" style="width: 600px; height: auto;"/>
+                </div>
+                <div class="row" style="text-align: center;">
+                    <input type="submit" class="btn btn-success" value="Valider" style="width: 200px;" />
                 </div>
             </form>
         </article>
