modif index.js + createPlan.ejs

--- a/IHM/views/commercial/createPlan.ejs
+++ b/IHM/views/commercial/createPlan.ejs
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
                     <h3>Plan :</h3>
-                    <img src="/images/CLA_1_CAR_0.png" alt="plan" style="width: 600px; height: auto;"/>
+                    <img src="/images/CLA_1_CAR_0.png" alt="plan" style="width: 600px; height: auto;"/><br/>
                 </div>
                 <div class="row" style="text-align: center;">
                     <input type="submit" class="btn btn-success" value="Valider" style="width: 200px;" />
