--- a/IHM/views/home.ejs
+++ b/IHM/views/home.ejs
@@ -21,7 +21,7 @@
                     <a href="commercial/createDevis"><h3>Créer Devis</h3></a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <a><h3>Visualiser Devis</h3></a>
+                    <a href="commercial/visualiserDevis"><h3>Visualiser Devis</h3></a>
                 </div>
             </artcile>
         </section>
