Ajout des scrolls sur les tableaux

--- a/IHM/views/commercial/visualiserDevis.ejs
+++ b/IHM/views/commercial/visualiserDevis.ejs
@@ -2,30 +2,41 @@
 <html lang="fr">
 
 <head>
-	<title>Madera</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/visualiserDevis.css">
-	<link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
+    <title>Madera</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/visualiserDevis.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
     <% include ../bootstrap_link.ejs %>
-	<link rel="shortcut icon" href="/images/icone.png">
+        <link rel="shortcut icon" href="/images/icone.png">
 </head>
 
 <body>
     <% include ../header.ejs %>
-	<section>
-        <article>
-            <h2>Visualiser un devis :   </h2>
-        </article>
-        <article>
-            <table>
-                <th>Client</th>
-                <th>Numero de devis</th>
-                <th>Visualisation du devis</th>
-                <th>Visualisation du dossier technique</th>
-            </table>
-        </article>
-    </section>
-    <% include ../footer.ejs %>
+        <section>
+            <article>
+                <h2>Visualiser un devis : </h2>
+            </article>
+            <article>
+                <div id="table-wrapper">
+                    <div id="table-scroll">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th><span class="text">Client</span></th>
+                                    <th><span class="text">Numero de devis</span></th>
+                                    <th><span class="text">Visualiser devis</span></th>
+                                    <th><span class="text">Visualiser dossier technique</span></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <% include ../footer.ejs %>
 </body>
+
 </html>
