--- a/IHM/views/commercial/createPlan.ejs
+++ b/IHM/views/commercial/createPlan.ejs
@@ -5,6 +5,7 @@
 	<title>Madera</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/table.css">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
 	<% include ../bootstrap_link.ejs %>
 	<link rel="shortcut icon" href="/images/icone.png">
@@ -26,14 +27,20 @@
                     <select class="form-control"></select><br>
                     <input type="submit" value="Ajouter" class="btn btn-success"><br>
                     <br>
-                    <table>
-                        <th style="width: 100px;">Options</th>
-                        <th style="width: 100px;">Supprimer</th>
-                        <tr>
-                            <td>Mur classique</td>
-                            <td><a href="">supprimer</a></td>
-                        </tr>
-                    </table>
+                    <div id="table-wrapper">
+                      <div id="table-scroll">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th><span class="text">Option</span></th>
+                                    <th><span class="text">Supprimer</span></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                          </table>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-8 col-sm-8 col-xs-12">
                     <h3>Plan :</h3>
