donnees inserees en bdd + modif commercial

--- a/IHM/views/commercial/home.ejs
+++ b/IHM/views/commercial/home.ejs
@@ -5,14 +5,27 @@
 	<title>Madera</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+	<% include ../bootstrap_link.ejs %>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
 	<link rel="shortcut icon" href="/images/icone.png">
 </head>
 
 <body>
-	<% include header.ejs %>
-		<div>Vous venez de vous connecter avec le login " <%= data.login %> " et le mdp " <%= data.password %> "</div>
-    <% include footer.ejs %>
+	<% include ../header.ejs %>
+        <section>
+            <article>
+                <h2>Bonjour <%= data.nom %> <%= data.prenom %> - <%= data.mail %></h2>
+            </article>
+            <artcile class="row" style="text-align: center;">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <a href="commercial/createDevis"><h3>Créer Devis</h3></a>
+                </div>
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <a href="commercial/visualiserDevis"><h3>Visualiser Devis</h3></a>
+                </div>
+            </artcile>
+        </section>
+    <% include ../footer.ejs %>
 </body>
 
 </html>
