--- a/IHM/views/commercial/createDevis.ejs
+++ b/IHM/views/commercial/createDevis.ejs
@@ -8,18 +8,19 @@
     <link rel="stylesheet" type="text/css" href="/stylesheets/header_footer.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
     <link rel="shortcut icon" href="/images/icone.png">
+    <script src="/libraries/angular.min.js"></script>
 </head>
 
 <body>
     <% include ../header.ejs %>
         <div class="container">
             <h1>Création d'un devis :</h1>
-            <form action="/commercial/createPlan" method="POST">
+            <form action="/commercial/createPlan" method="POST" onsubmit="return verifForm()" name="mainForm">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <h2>Projet :</h2>
                         <label>Nom du projet :</label><br/>
-                        <input type="text" id="nomProjet" name="nomProjet" class="form-control" />
+                        <input type="text" id="nomProjet" name="nomProjet" class="form-control" required/>
                         <h2>Client :</h2>
                         <select id="client" name="client" class="form-control">
                             <% for(var i=0; i < clients.length; i++){ %>
@@ -31,20 +32,20 @@
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <h2>Adresse :</h2>
                         <label>Numéro :</label><br/>
-                        <input type="text" id="numClient" name="numClient" class="form-control" /><br/>
+                        <input type="number" id="numClient" name="numClient" class="form-control" required/><br/>
                         <label>Adresse :</label><br/>
-                        <input type="text" id="adresseClient" name="adresseClient" class="form-control" /><br/>
+                        <input type="text" id="adresseClient" name="adresseClient" class="form-control" required/><br/>
                         <label>Code postal :</label><br/>
-                        <input type="text" id="postalClient" name="postalClient" class="form-control" /><br/>
+                        <input type="number" id="postalClient" name="postalClient" class="form-control" required/><br/>
                         <label>Ville :</label><br/>
-                        <input type="text" id="villeClient" name="villeClient" class="form-control" /><br/>
+                        <input type="text" id="villeClient" name="villeClient" class="form-control" required/><br/>
                         <label>Pays :</label><br/>
-                        <input type="text" id="paysClient" name="paysClient" class="form-control" /><br/>
+                        <input type="text" id="paysClient" name="paysClient" class="form-control" required/><br/>
                     </div>
                 </div>
             </form>
         </div>
-        <% include ../footer.ejs %>
+    <% include ../footer.ejs %>
 </body>
 
 </html>
