Mise en place des pages pour module et gamme

--- a/IHM/views/etudes/gestionGammes.ejs
+++ b/IHM/views/etudes/gestionGammes.ejs
@@ -19,8 +19,20 @@
             <article>
                 <input type="text" placeholder="rechercher" class="form-control"/>
             </article>
+            <br>
             <article>
-
+                <a href="/etudes/creerGamme" class="btn btn-success">Ajouter Gamme</a>
+            </article>
+            <br>
+            <article>
+                <table class="table">
+                    <tr>
+                        <th>Modules</th>
+                        <th>Détails</th>
+                        <th>Modifier</th>
+                        <th>Supprimer</th>
+                    </tr>
+                </table>
             </article>
         </section>
     <% include ../footer.ejs %>
