--- a/IHM/views/commercial/createPlan.ejs
+++ b/IHM/views/commercial/createPlan.ejs
@@ -15,36 +15,25 @@
 	<% include ../header.ejs %>
 		<section>
 			<article class="row">
-				<form>
-					<div class="col-md-4 col-sm-4 col-xs-12">
+				<form action="/commercial/confirmCreation" method="POST">
+					<div class="col-md-6 col-sm-6 col-xs-12">
 						<label>Gamme de la maison :</label><br>
-						<select id="gamme" class="form-control" onchange="searchModele()"></select><br>
+						<select id="gamme" name="gamme" class="form-control" onchange="searchModele()"></select><br>
 						<label>Choix du modèle :</label><br>
-						<select id="modele_gamme" class="form-control" onchange="searchEtage()"></select><br>
+						<select id="modele_gamme" name="modele_gamme" class="form-control" onchange="searchEtage()"></select><br>
 						<label>Choix de l'étage :</label><br>
-						<select id="etage" class="form-control"></select><br>
+						<select id="etage" name="etage" class="form-control" onchange="searchPlan()"></select><br>
 						<label>Ajouts des options :</label><br>
-						<select id="optionsAvailable" class="form-control"></select><br>
-						<input type="submit" value="Ajouter" class="btn btn-success"><br>
+						<select id="optionsAvailable" name="optionsAvailable" class="form-control"></select><br>
+						<input type="button" value="Ajouter" class="btn btn-success" onclick="addOption()"><br>
 						<br>
-						<div id="table-wrapper">
-							<div id="table-scroll">
-								<table>
-									<thead>
-										<tr>
-											<th><span class="text">Option</span></th>
-											<th><span class="text">Supprimer</span></th>
-										</tr>
-									</thead>
-									<tbody>
-									</tbody>
-								</table>
-							</div>
-						</div>
+                        <label>Options ajoutées :</label><br>
+						<select id="optionsSelected" name="optionsSelected" class="form-control"></select><br>
+						<input type="button" value="Supprimer" class="btn btn-danger" onclick="deleteOption()"><br>
 					</div>
-					<div class="col-md-8 col-sm-8 col-xs-12">
+					<div class="col-md-6 col-sm-6 col-xs-12">
 						<h3>Plan :</h3>
-						<img src="/images/plan.png" alt="plan" style="width: 600px; height: auto;" /><br/>
+						<img src="" id="plan" alt="plan" style="width: 600px; height: auto;" /><br/>
 					</div>
 					<div class="row" style="text-align: center;">
 						<input type="submit" class="btn btn-success" value="Valider" style="width: 200px;" />
@@ -57,6 +46,7 @@
 		</section>
 		<% include ../footer.ejs %>
 		<script>
+            var options = [];
 			window.onload = function() {
 				$.post("/commercial/createPlanSearch", {
 					typeSearch: "gamme"
@@ -65,10 +55,10 @@
 					for (var i = 0; i < Object.keys(newData).length; i++) {
 					 	var option = document.createElement("option");
 					  	option.value = newData[i].id;
-					  	option.text = newData[i].nom;
+					  	option.text = newData[i].nom+" - "+newData[i].qualite;
 					  	document.getElementById('gamme').add(option);
 					}
-					searchModele();
+                    searchModele();
 				});
 			}
 
@@ -92,18 +82,69 @@
 			function searchEtage(){
 				document.getElementById("etage").innerHTML = '';
 				var nb_etages = document.getElementById("modele_gamme").value.split('-')[1];
-				for(var i = 0; i < nb_etages; i++){
-					var option = document.createElement("option");
-					option.value = i;
-					if(i == 0){
-						option.text = "RDC";
-					}
-					else{
-						option.text = i;
-					}
-					document.getElementById("etage").add(option);
-				}
+                for (var i = 0; i < nb_etages; i++) {
+                    var option = document.createElement("option");
+                    option.value = i;
+                    if(i == 0){
+                        option.text = "RDC";
+                    }
+                    else{
+                        option.text = i;
+                    }
+                    document.getElementById("etage").add(option);
+                }
+                searchPlan();
+                searchOptions();
 			}
+
+            function searchPlan(){
+                var id_etage = document.getElementById("etage").value;
+                $.post("/commercial/createPlanSearch", {
+					typeSearch: "plan",
+					data: document.getElementById("modele_gamme").value.split('-')[0]
+				}, function(data) {
+					var newData = JSON.parse(data);
+					for (var i = 0; i < Object.keys(newData).length; i++) {
+                        if(""+id_etage == ""+newData[i].nu_etage){
+                            console.log(newData[i].image);
+                            document.getElementById('plan').setAttribute("src", "/images/plans/"+newData[i].image+".png");
+                            break;
+                        }
+					}
+				});
+            }
+
+            function searchOptions(){
+                $.post("/commercial/createPlanSearch", {
+					typeSearch: "modules"
+				}, function(data) {
+					var newData = JSON.parse(data);
+                    document.getElementById("optionsAvailable").innerHTML = '';
+					for (var i = 0; i < Object.keys(newData).length; i++) {
+                        var option = document.createElement("option");
+                        option.value = newData[i].id+";"+newData[i].nom;
+                        option.text = newData[i].nom;
+                        document.getElementById("optionsAvailable").add(option);
+					}
+				});
+            }
+
+            function addOption(){
+                options[options.length] = {
+                    val: document.getElementById("optionsAvailable").value.split(";")[0],
+                    exist:"y"
+                };
+                var option = document.createElement("option");
+                option.value = options.length-1;
+                option.text = document.getElementById("optionsAvailable").value.split(";")[1];
+                option.setAttribute("id", options.length-1);
+                document.getElementById("optionsSelected").add(option);
+            }
+
+            function deleteOption(){
+                options[document.getElementById('optionsSelected').value].exist="n";
+                $('#'+document.getElementById('optionsSelected').value).remove();
+            }
 		</script>
 </body>
 
