Ajout de la page fournisseur

--- a/IHM/views/etudes/home.ejs
+++ b/IHM/views/etudes/home.ejs
@@ -18,10 +18,10 @@
             </article>
             <artcile class="row" style="text-align: center;">
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <a href="etudes/gestionModules"><h3>Gestion module</h3></a>
+                    <a href="etudes/gestionModules"><h3>Gestion modules</h3></a>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <a href="etudes/gestionGammes"><h3>Gestion gamme</h3></a>
+                    <a href="etudes/gestionGammes"><h3>Gestion gammes</h3></a>
                 </div>
             </artcile>
         </section>
